--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "author": "Facebook",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "body-parser": "^1.15.0",
     "config": "^1.20.4",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
+    "mongodb": "^2.2.19",
+    "mongoose": "^4.7.6",
     "request": "^2.72.0"
   },
   "engines": {
