--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.0",
     "config": "^1.20.4",
+    "cors": "^2.8.1",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
     "mongodb": "^2.2.19",
