--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.0",
+    "chai": "^3.5.0",
     "config": "^1.20.4",
     "cors": "^2.8.1",
     "ejs": "^2.4.2",
@@ -27,5 +28,9 @@
   },
   "engines": {
     "node": "~4.1.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
